<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.benjamin.assessment.activities.TermDetailActivity">

    <item
        android:id="@+id/action_add_course"
        android:orderInCategory="101"
        android:title="@string/action_add_course"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_edit_term"
        android:orderInCategory="102"
        android:title="@string/action_edit_term"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_delete_term"
        android:orderInCategory="103"
        android:title="@string/action_delete_term"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_view_courses"
        android:orderInCategory="104"
        android:title="@string/action_view_courses"
        app:showAsAction="never"
        />

</menu>