<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.benjamin.assessment.activities.AssessmentDetailActivity">

    <item
        android:id="@+id/action_edit_assessment"
        android:title="@string/action_edit_assessment"
        android:orderInCategory="101"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_delete_assessment"
        android:title="@string/action_delete_assessment"
        android:orderInCategory="102"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_alert_assessment"
        android:title="@string/action_alert_assessment"
        android:orderInCategory="103"
        app:showAsAction="never"
        />

</menu>