<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mentor_dialog"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium"
    >

    <TextView
        android:id="@+id/mentor_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/mentor_title"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/mentor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:hint="@string/mentor_name_hint"
        android:textAppearance="@android:style/TextAppearance.Material.Body2"
        android:inputType="text"/>

    <EditText
        android:id="@+id/mentor_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:hint="@string/mentor_phone_hint"
        android:textAppearance="@android:style/TextAppearance.Material.Body2"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/mentor_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:hint="@string/mentor_email_hint"
        android:textAppearance="@android:style/TextAppearance.Material.Body2"
        android:inputType="textEmailAddress"/>

</LinearLayout>